tests/errors/syn_method16.java
public class syn_method16 {
public static int main ( ) {

}